# devcloud

./: .gitignore  .ignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  go.mod  go.sum
orchestrator/: Cargo.toml
orchestrator/src/: config.rs  main.rs  supervisor.rs
orchestrator/src/services/: applicationautoscaling.rs  bigquery.rs  dashboard.rs  dynamodb.rs  gcs.rs  mail.rs  managed_postgres.rs  mod.rs  pubsub.rs  redis.rs  redshift.rs  s3.rs  sqs.rs  util.rs
orchestrator/tests/: dashboard_conformance.rs
rust/: Cargo.toml  README.md
rust/services/applicationautoscaling/: Cargo.toml
rust/services/applicationautoscaling/src/: http.rs  lib.rs  main.rs  server.rs  sigv4.rs  time_fmt.rs  types.rs
rust/services/applicationautoscaling/tests/: parity_test.rs
rust/services/dynamodb/: Cargo.toml
rust/services/dynamodb/src/: attribute.rs  errors.rs  expression.rs  go_json.rs  http.rs  lib.rs  main.rs  model.rs  number.rs  partiql.rs  persistence.rs  query.rs  requests.rs  responses.rs  server.rs  sigv4.rs  streams.rs  time_util.rs  update_expression.rs  validation.rs
rust/services/dynamodb/tests/: batch_parity.rs  dispatch_parity.rs  item_parity.rs  partiql_parity.rs  query_parity.rs  stream_parity.rs  table_parity.rs  ttl_backup_parity.rs  update_parity.rs
rust/services/dynamodb/tests/fixtures/: bes.json  bget_proj.json  (+30 more)
rust/services/gcs/: Cargo.toml
rust/services/gcs/src/: http.rs  lib.rs  main.rs
rust/services/gcs/tests/: http_parity.rs
rust/services/mail/: Cargo.toml
rust/services/mail/src/: blob.rs  lib.rs  main.rs  model.rs  parser.rs  service.rs  smtp.rs  store.rs  time_fmt.rs
rust/services/mail/tests/: parser_test.rs  smtp_test.rs  store_test.rs
rust/services/pubsub/: Cargo.toml
rust/services/pubsub/src/: delivery.rs  duration.rs  errors.rs  go_json.rs  http.rs  lib.rs  main.rs  model.rs  patch.rs  paths.rs  persistence.rs  responses.rs  server.rs  time_fmt.rs  validation.rs
rust/services/pubsub/tests/: http_parity.rs  message_parity.rs  snap_schema_parity.rs  subscription_parity.rs  topic_parity.rs
rust/services/redis/src/: lib.rs  main.rs
rust/services/s3/: Cargo.toml
rust/services/s3/src/: base64.rs  csv.rs  go_json.rs  hashes.rs  http.rs  lib.rs  main.rs  model.rs  objops.rs  percent.rs  responses.rs  store.rs  store_config.rs  store_inventory.rs  store_multipart.rs  store_objectlock.rs  store_objects.rs  time_fmt.rs  validation.rs  xml.rs
rust/services/s3/tests/: config2_parity.rs  config_parity.rs  foundation_parity.rs  multipart_parity.rs  objects_parity.rs  store_parity.rs  xml_parity.rs
rust/services/sqs/: Cargo.toml
rust/services/sqs/src/: errors.rs  hashing.rs  http.rs  http_json.rs  lib.rs  main.rs  messages.rs  model.rs  move_tasks.rs  persistence.rs  policy.rs  server.rs  sigv4.rs  time_fmt.rs  validation.rs
rust/services/sqs/tests/: hashing_test.rs  http_json_test.rs  messages_test.rs  move_tasks_test.rs  persistence_test.rs  server_test.rs  sigv4_test.rs  validation_test.rs
services/applicationautoscaling/: Cargo.toml
services/applicationautoscaling/src/: http.rs  lib.rs  main.rs  server.rs  sigv4.rs  time_fmt.rs  types.rs
services/applicationautoscaling/tests/: parity_test.rs
services/bigquery/: Cargo.toml
services/bigquery/src/: dashboard.rs  dataset_handlers.rs  http.rs  iam_handlers.rs  introspect.rs  job_handlers.rs  job_load_extract.rs  lib.rs  main.rs  model.rs  query_engine.rs  responses.rs  routes.rs  routine_handlers.rs  server.rs  sql_eval.rs  sql_parser.rs  storage.rs  table_handlers.rs  tabledata_handlers.rs  validation.rs  wire_json.rs
services/bigquery/tests/: dashboard_parity.rs  dataset_parity.rs  iam_parity.rs  jobs_load_extract_parity.rs  jobs_parity.rs  jobs_query_parity.rs  query_sql_parity.rs  server_parity.rs  storage_parity.rs  table_parity.rs  tabledata_parity.rs
services/bigquery/tests/fixtures/: dataset.json  iam_policy.json  job.json  response_create_dataset.json  response_missing_dataset.json  response_set_iam.json  streaming_buffer.jsonl  table.json
services/dashboard/: Cargo.toml
services/dashboard/assets/react/: index.html
services/dashboard/src/: assets.rs  bigquery.rs  config.rs  dynamodb.rs  events.rs  forward.rs  gcs.rs  http.rs  lib.rs  mail.rs  main.rs  pubsub.rs  redis.rs  redshift.rs  s3.rs  service_index.html  services.rs  sqs.rs
services/dashboard/tests/: events.rs  forwarding.rs
services/event-relay/: Cargo.toml
services/event-relay/src/: lib.rs
services/pubsub/: Cargo.toml  build.rs
services/pubsub/src/: dashboard.rs  delivery.rs  duration.rs  errors.rs  grpc.rs  http.rs  introspect.rs  lib.rs  main.rs  model.rs  patch.rs  paths.rs  persistence.rs  proto.rs  responses.rs  server.rs  time_fmt.rs  validation.rs  wire_json.rs
services/pubsub/tests/: grpc_conformance.rs  http_parity.rs  introspect_parity.rs  message_parity.rs  snap_schema_parity.rs  subscription_parity.rs  topic_parity.rs
services/pubsub/tests/fixtures/: iam_set.json  m_publish.json  m_pull.json  m_state_pulled.json  ml_pull.json  resources_topic.json  sch_create_put.json  sch_list.json  sch_list_basic.json  snap_list.json  t_list.json  t_list_page.json  t_list_page2.json  t_patch_wrapped.json  t_snaps.json  topics_list.json
services/redis/: Cargo.toml
services/redis-control/: Cargo.toml
services/redis-control/src/: command_allowlist.rs  http.rs  lib.rs  resp.rs  server.rs
services/redis/src/: lib.rs  main.rs
services/redshift/: Cargo.toml
services/redshift/src/: backend.rs  backend_memory.rs  backend_postgres.rs  catalog.rs  cluster.rs  copy_unload.rs  dataapi.rs  engine.rs  errors.rs  http.rs  http_api.rs  lib.rs  main.rs  model.rs  pg_types.rs  pgwire.rs  pgwire_codec.rs  pgwire_extended.rs  server.rs  snapshot.rs  sql_parse.rs  sql_predicates.rs  storage.rs  translator.rs
services/redshift/tests/: backend_memory_parity.rs  backend_parity.rs  backend_postgres_parity.rs  catalog_parity.rs  control_plane_parity.rs  dashboard_parity.rs  dataapi_parity.rs  pgwire_parity.rs  sql_parity.rs  translator_parity.rs
services/redshift/tests/common/: mod.rs
(+917 files in other folders)
