[package]
name = "devcloud-pubsub"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of the devcloud Pub/Sub service (gRPC + REST sharing one state) — legacy-to-Rust transmute increments #5/#6 (REST), #N (gRPC unary), #N+1 (StreamingPull)."

[lib]
name = "devcloud_pubsub"
path = "src/lib.rs"

[[bin]]
name = "devcloud-pubsub"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# serde_json's default Map is a BTreeMap (sorted keys), matching legacy sorted-key
# map marshaling. Do NOT enable preserve_order.
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "signal", "time", "sync"] }
# gRPC: the in-process legacy server is the parity reference; the Rust process serves
# BOTH gRPC and REST sharing one in-memory state. Well-known types (Duration,
# Timestamp, Empty, FieldMask) are bundled by tonic-build / prost-types.
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
# ReceiverStream for the StreamingPull server-streaming response.
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
# The in-process gRPC conformance test (`tests/grpc_conformance.rs`) serves the
# tonic services over a loopback TcpListener (`TcpListenerStream`, gated behind
# tokio-stream's `net` feature) and drives them with the generated `*Client`
# types over a `tonic::transport::Channel`. Declared here so the test target does
# not rely on workspace feature unification to enable `net`.
tokio-stream = { version = "0.1", features = ["sync", "net"] }

[build-dependencies]
tonic-build = "0.12"
