[package]
name = "devcloud-redis-control"
version = "0.1.0"
edition = "2021"
description = "Redis control/introspection HTTP surface for the devcloud dashboard — Rust port of internal/services/redis http.rs + server.rs with a hand-rolled RESP client."

[lib]
name = "devcloud_redis_control"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
