[package]
name = "devcloud-mail"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of the devcloud mail (SMTP) service — strangler-fig increment #1 of the Go→Rust transmute."

[lib]
name = "devcloud_mail"
path = "src/lib.rs"

[[bin]]
name = "devcloud-mail"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "net", "sync", "time", "signal"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "net", "sync", "time"] }
