[package]
name = "devcloud-sqs"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of the devcloud SQS service — strangler-fig increment #3 of the Go→Rust transmute (foundation: hashing + validation + model)."

[lib]
name = "devcloud_sqs"
path = "src/lib.rs"

[[bin]]
name = "devcloud-sqs"
path = "src/main.rs"

[dependencies]
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
# Default serde_json Map is a BTreeMap (sorted keys), matching Go's sorted-key
# map JSON marshaling — do NOT enable preserve_order.
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "signal"] }

[dev-dependencies]
